Alignment fix and try again to fix updates

--- a/public/styles/main_styles.css
+++ b/public/styles/main_styles.css
@@ -1490,6 +1490,12 @@ section
 {
 	margin-top: 9px;
 }
+
+.portable_text .news_post_meta ul, .news_post_meta ul
+{
+	margin-left: 0;
+}
+
 .news_post_meta ul li
 {
 	display: inline-block;
